--- a/Vie/View Controllers/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/FWPatternPickerViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
@@ -9,6 +8,7 @@
             <connections>
                 <outlet property="collectionView" destination="puz-N6-5Ir" id="naY-BC-jNG"/>
                 <outlet property="collectionViewLayout" destination="LYG-HZ-Nd9" id="lFF-Rq-dw0"/>
+                <outlet property="favouriteButton" destination="H2t-ci-Fn6" id="eyq-cy-Mf0"/>
                 <outlet property="noResultContainer" destination="VZt-Qw-nBh" id="PcJ-HT-ORc"/>
                 <outlet property="noResultLabel" destination="iyp-m4-2eg" id="uuY-YY-B57"/>
                 <outlet property="searchBar" destination="MG5-82-XP3" id="Mgy-E1-Y9f"/>
@@ -42,7 +42,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" id="MG5-82-XP3" customClass="FWTextField">
-                            <rect key="frame" x="0.0" y="36" width="268" height="52"/>
+                            <rect key="frame" x="0.0" y="36" width="216" height="52"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
@@ -52,6 +52,16 @@
                                 <outlet property="delegate" destination="-1" id="M6Z-Z2-mh5"/>
                             </connections>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="H2t-ci-Fn6">
+                            <rect key="frame" x="216" y="36" width="58" height="58"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" image="heart-selected">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="favouriteButtonTapped:" destination="-1" eventType="touchUpInside" id="ErZ-i9-OLb"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
@@ -75,7 +85,7 @@
                             <rect key="frame" x="0.0" y="42" width="320" height="21"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -88,6 +98,7 @@
     </objects>
     <resources>
         <image name="error" width="22" height="22"/>
+        <image name="heart-selected" width="22" height="18"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
