--- a/Vie/View Controllers/FWGameViewController.xib
+++ b/Vie/View Controllers/FWGameViewController.xib
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FWGameViewController">
             <connections>
-                <outlet property="adBannerView" destination="JUg-5I-gZc" id="r0b-hn-nLl"/>
                 <outlet property="gameBoardView" destination="s64-Ux-IZu" id="Njk-7z-XhD"/>
                 <outlet property="gameToolbar" destination="TjQ-Di-LOB" id="TtG-pq-hKW"/>
                 <outlet property="view" destination="hv1-FZ-NOM" id="zzr-T4-wh4"/>
@@ -26,10 +24,6 @@
                         <outlet property="delegate" destination="-1" id="JBZ-Ob-S1o"/>
                     </connections>
                 </view>
-                <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="JUg-5I-gZc">
-                    <rect key="frame" x="0.0" y="460" width="320" height="50"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                </adBannerView>
                 <view contentMode="scaleToFill" id="TjQ-Di-LOB" customClass="FWGameToolbar">
                     <rect key="frame" x="0.0" y="510" width="320" height="58"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -39,7 +33,7 @@
                     </connections>
                 </view>
                 <view contentMode="scaleToFill" id="s64-Ux-IZu" userLabel="Game Board View" customClass="FWBoardView">
-                    <rect key="frame" x="0.0" y="58" width="320" height="402"/>
+                    <rect key="frame" x="0.0" y="58" width="320" height="452"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
