--- a/Vie/View Controllers/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/FWPatternPickerViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
@@ -55,9 +56,10 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="H2t-ci-Fn6">
                             <rect key="frame" x="216" y="36" width="58" height="58"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" image="heart-selected">
+                            <state key="normal" image="favourite-toggle">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <state key="selected" image="favourite-toggle-selected"/>
                             <connections>
                                 <action selector="favouriteButtonTapped:" destination="-1" eventType="touchUpInside" id="ErZ-i9-OLb"/>
                             </connections>
@@ -98,7 +100,8 @@
     </objects>
     <resources>
         <image name="error" width="22" height="22"/>
-        <image name="heart-selected" width="22" height="18"/>
+        <image name="favourite-toggle" width="22" height="18"/>
+        <image name="favourite-toggle-selected" width="22" height="18"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
